--- a/views/gradeCard.ejs
+++ b/views/gradeCard.ejs
@@ -10,17 +10,17 @@
 </head>
 
 <body>
-    <h3>
-        <%= result[0].semesterEnrolled.name %>
-    </h3>
-    <h3>Name: <%= result[0].studentEnrolled.firstname %>
-            <%= result[0].studentEnrolled.middlename %>
-                <%= result[0].studentEnrolled.lastname %>
-    </h3>
-    <h3>Semester number: <%= tuple[1] %>
-    </h3>
-    <br>
-    <form action="/semesterRegistration" method="post">
+    <form action="/gradeCard" method="post">
+        <h3>
+            <%= result[0].semesterEnrolled.name %>
+        </h3>
+        <h3>Name: <%= result[0].studentEnrolled.firstname %>
+                <%= result[0].studentEnrolled.middlename %>
+                    <%= result[0].studentEnrolled.lastname %>
+        </h3>
+        <h3>Semester number: <%= tuple[1] %>
+        </h3>
+        <br>
         <table>
             <tr>
                 <th>SR No</th>
@@ -29,7 +29,7 @@
                 <th>Course Credits</th>
                 <th>Grade</th>
             </tr>
-            <% var spi=0,count =0 %>
+            <% var spi=0,count=0 %>
                 <% for (var i=0; i <result.length; i++) { %>
                     <tr>
                         <td>
@@ -47,12 +47,12 @@
                         <td>
                             <% if (result[i].grade) { %>
                                 <%= result[i].grade %>
-                                <% spi += result[i].grade %>
-                                <% count++ %>
-                            <% } else { %>
-                                -
-                            <% } %>
-                            
+                                    <% spi +=result[i].grade %>
+                                        <% count++ %>
+                                            <% } else { %>
+                                                -
+                                                <% } %>
+
                         </td>
                     </tr>
                     <% } %>
@@ -60,16 +60,21 @@
         </table>
 
         <% if (count==6) { %>
-            <% spi = spi/6.0 %>
-            <h4>SPI: <%= spi %></h4>
-            <button>Download</button>
-        <% } else { %>
-            <h4>SPI: Not declared</h4>
-            <button disabled="disabled">Download</button>
-        <% } %>
-        
+            <% spi /=6 %>
+                <% spi=Math.round(spi * 100) / 100 %>
+                    <h4>SPI: <%= spi %>
+                    </h4>
 
+
+                    <% } else { %>
+                        <h4>SPI: Not declared</h4>
+
+                        <% } %>
+
+                            <button type="submit" name="result"
+                                value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
     </form>
+
 </body>
 
 </html>
