--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-html { overflow-y: scroll; }
+/* html { overflow-y: scroll; } */
 
 .header h2,h1, input{
     font-family: 'Spartan', sans-serif;
@@ -8,10 +8,119 @@ html { overflow-y: scroll; }
     margin-top: 5%;
     margin-bottom: 3%;
 }
-.sub-header h3,h5,h4,p, button{
+.sub-header h3,h5,h4{
     margin-left: 29%;
     margin-bottom: 0.5%;
 }
+.show{
+  display: flex;
+  justify-content: space-between;
+}
+.sub-header{
+  margin-right: 10%;
+  margin-top: 3%;
+}
+.head-button{
+  height: 40px;
+  border: none;
+  background-color: #242728;
+  color: white;
+  border-radius: 5px;
+  box-shadow: 2px 2px 3px 1px rgb(0,0,0,0.2);
+  padding: 8px;
+}
+.head-button:hover{
+  transform: scale(0.9);
+  transition: 0.5s;
+}
+
+.submit {
+    border: none;
+    outline: none;
+    position: relative;
+    text-align: center;
+    height: 45px;
+    width: 70px;
+    border: 2px solid #242728;
+    border-radius: 5px;
+    transition: 0.4s;
+    background: #242728;
+    color: #fff;
+    cursor: pointer;
+    margin-left: 3.2%;
+  }
+  .submit:hover {
+    transform: scale(0.96);
+    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.2);
+  }
+.mybtn{
+    align-items: center;
+    text-align: center;
+    color: black;
+    cursor: pointer;
+    border: none !important;
+    background: transparent !important;
+    font-size: 20px;
+    font-weight: 100;
+}
+.mybtn:hover{
+    transform: scale(0.9);
+    color: grey;
+}
+
+.mycontainer{
+  display: flex;
+  justify-content: space-between;
+}
+
+.button-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+  }
+  
+  .hover-button {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    background-color: #242728;
+    color: white;
+    font-size: 20px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    position: relative;
+}
+
+  .hover-button:hover{
+    transform: scale(1.1);
+    transition: background-color 0.2s ease-in-out;
+
+  }
+  .hover-button:hover + .tooltip {
+    visibility: visible !important;
+    
+  }
+  
+  .tooltip {
+    visibility: hidden;
+    background-color: #242728 !important;
+    font-size: 120px;
+    color: white;
+    text-align: center;
+    border-radius: 6px;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    position: absolute;
+    bottom: 105%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    white-space: nowrap;
+  }
+  
 /* hr{
     color: whitesmoke
 }
@@ -61,76 +170,9 @@ th {
 } */
 
 /* Google Fonts Import Link */
-@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 * {
-    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-}
-
-body {
-    background-color: #ececec;
-}
-
-/* sidebar */
-.menu-toggle {
-    display: none;
-    position: fixed;
-    top: 2rem;
-    right: 2rem;
-    width: 30px;
-    height: 30px;
-    border-radius: 5px;
-    background-color: #2e3047;
-    cursor: pointer;
-}
-
-.hamburger {
-    position: relative;
-    top: calc(50% - 2px);
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 25px;
-}
-
-.hamburger>span,
-.hamburger>span::before,
-.hamburger>span::after {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    border-radius: 99px;
-    background-color: #FFF;
-    transition-duration: .25s;
-}
-
-.bxs-user-plus {
-    padding-left: 5px;
-}
-
-.hamburger>span::before {
-    content: '';
-    top: -8px;
-}
-
-.hamburger>span::after {
-    content: '';
-    top: 8px;
-}
-
-.menu-toggle.is-active .hamburger>span {
-    transform: rotate(45deg);
-}
-
-.menu-toggle.is-active .hamburger>span::before {
-    top: 0;
-    transform: rotate(0deg);
-}
-
-.menu-toggle.is-active .hamburger>span::after {
-    top: 0;
-    transform: rotate(90deg);
 }
 
 .sidebar {
@@ -142,38 +184,23 @@ body {
     background: #242728;
     z-index: 100;
     transition: all 0.5s ease;
+    box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.6);
+
 }
 
 .sidebar .logo-details {
-    height: 3rem;
-    padding-left: 18%;
-    padding-top: 22%;
+    height: 6rem;
+    padding-left: 22%;
+    padding-top: 10%;
     display: flex;
     align-items: center;
-    padding-bottom: 13%;
-}
+    margin-bottom: 8%;
+  }
 
-.sidebar .logo-details i {
-    font-size: 30px;
-    color: #fff;
-    height: 50px;
-    min-width: 78px;
-    text-align: center;
-    line-height: 50px;
-}
-
-.sidebar .logo-details .logo_name {
-    font-size: 22px;
-    color: #fff;
-    font-weight: 600;
-    transition: 0.3s ease;
-    transition-delay: 0.1s;
-}
-
-.sidebar .logo-details img {
+  .sidebar .logo-details .logo_name {
     padding-top: 1%;
     padding-left: 4%;
-}
+  }
 
 .sidebar .nav-links {
     height: 100%;
@@ -193,21 +220,13 @@ body {
 
 .sidebar .nav-links li:hover {
     color: cyan;
-    /* background: #1d1b31; */
 }
 
 .sidebar .nav-links span:hover {
     color: cyan;
-    /* background: #1d1b31; */
 }
 
 .sidebar .nav-links li .iocn-link {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.sidebar .nav-links li .iocn-link:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -336,42 +355,107 @@ body {
     padding: 12px;
 }
 
+
+
 .attedance-logo i {
     padding-left: 5px;
 }
 
 .logout{
-    background-color: transparent;
-    /* border: none; */
-    width: 50%;
-    border-radius:50%;
+  background-color: transparent; /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  font-size: 20px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
 
 }
 
 /* sidebar responsive */
-@media (max-width: 768px) {
-    .menu-toggle {
-        display: block;
-    }
-
-    .content {
-        padding-top: 8rem;
-    }
-
+@media (max-width: 540px) {
     .sidebar {
-        position: fixed;
-        top: 0;
-        left: -300px;
-        height: 100vh;
-        width: 100%;
-        width: 260px;
-        transition: 0.2s linear;
+      width: 240px;
     }
-
-    .sidebar.is-active {
-        left: 0;
+    .sidebar .nav-links li a .link_name {
+        font-size: 14px;
     }
-}
+    .sidebar.close {
+      width: 0px;
+    }
+    .sidebar .logo-details{
+      padding-left: 15%;
+    }
+    .sidebar.close .logo-details .logo_name {
+      display: none;
+      transition-delay: 0s;
+      opacity: 0;
+      pointer-events: none;
+    }
+    .sidebar.close .nav-links {
+      display: none;
+      overflow: visible;
+    }
+    .sidebar.close .nav-links li .iocn-link {
+      display: block;
+    }
+    .sidebar.close .nav-links i.arrow {
+      display: none;
+    }
+    .sidebar.close .nav-links li a .link_name {
+      opacity: 0;
+      pointer-events: none;
+    }
+    .sidebar.close .profile-details img {
+      display: none;
+    }
+    .sidebar.close .nav-links li .sub-menu {
+      position: absolute;
+      left: 100%;
+      top: -10px;
+      margin-top: 0;
+      padding: 10px 20px;
+      border-radius: 0 6px 6px 0;
+      opacity: 0;
+      display: block;
+      pointer-events: none;
+      transition: 0s;
+    }
+    .sidebar.close .nav-links li:hover .sub-menu {
+      top: 0;
+      opacity: 1;
+      pointer-events: auto;
+      transition: all 0.4s ease;
+    }
+    .sidebar.close .profile-details i,
+    .sidebar.close .profile-details .profile_name,
+    .sidebar.close .profile-details .job {
+      display: none;
+    }
+    .sidebar.close .nav-links li .sub-menu .link_name {
+      font-size: 18px;
+      opacity: 1;
+      display: block;
+    }
+    .home-section .home-content .bx-menu {
+      visibility: visible;
+    }
+    .sidebar .profile-details {
+      width: 0px;
+    }
+    .sidebar.close .profile-details {
+      background: #3b3b42;
+    }
+    .sidebar.close .profile-details {
+      width: 0px;
+    }
+    .main-body {
+      left: 240px;
+      width: calc(100% - 240px);
+    }
+    .sidebar.close ~ .main-body {
+      left: 0px;
+      width: calc(100% - 78px);
+    }
+  }
 
 
 /* main body */
@@ -381,6 +465,7 @@ body {
 }
 
 .main-body-top {
+    margin-left: 4.8%;
     padding-top: 5rem;
     padding-left: 22rem;
 }
@@ -388,4 +473,132 @@ body {
 .main-body h1 {
     font-family: 'Spartan', sans-serif;
     color: #242728;
+}
+.home-section{
+    background-color: white
+}
+
+  .home-section .home-content .bx-menu{
+    visibility: hidden;
+    color: #11101d;
+    font-size: 35px;
+  }
+  .home-section .home-content .bx-menu {
+    cursor: pointer;
+    margin-right: 10px;
+  }
+
+.student-container{
+    position: relative;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10%;
+    margin-left: 20%;
+    margin-right:10%;
+    width: 80%;
+
+}
+
+.st-left{
+    width: 20%;
+    align-items: center;
+    text-align: center;
+    /* margin: 10px; */
+}
+.st-right{
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(240, 240, 240);
+    border-radius: 10px;
+    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.2);
+    width: 70%;
+    height: 550px;
+}
+
+.left-head{
+    width: 100%;
+    height: 255px;
+    background: #242728;
+    color: white;
+    padding-top: 2%;
+    padding-bottom: 5%;
+    display: grid;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgb(240, 240, 240);
+    border-top-left-radius:15px;
+    border-top-right-radius:15px;
+    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.2);
+
+}
+.left-body{
+    padding-top: 10px;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 262px;
+    border: 1px solid rgb(240, 240, 240);
+    border-bottom-left-radius:15px ;
+    border-bottom-right-radius:15px ;
+    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.2);
+}
+.profile{
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.name{
+    text-align: center;
+    margin-top: 200px;
+}
+.profile-image{
+    align-items: center;
+    width: 150px;
+    height: 150px;
+    border: 3px solid rgb(255, 255, 255);
+    object-fit: cover;
+    margin-left: 35px ;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+
+.field{
+    padding-top: 15px;
+    text-align: center !important;
+    font-size: 17px;
+}
+.field1{
+    margin-left: 20px;   
+    margin-top: 20px;    
+    font-size: 28px;
+}
+.profile-table{
+    margin-left: 20px;
+    text-align: left;
+    padding-left: 10px;
+    border-collapse: collapse;
+    width:94%
+}
+.profile-table td,th{
+    padding: 10px;
+    border: 1px solid rgb(220, 220, 220);
+}
+.profile-table th{
+    width: 25%;
+}
+@media (max-width: 767px){
+    .student-container{
+        display: grid;
+        overflow: hidden;
+        margin-left: 1%;
+        margin-right:1%;
+    }
+    .left-head{
+        width: 100%;
+    }
+    .left-body{
+        width:100%;
+    }
 }
